tests/golden/3-basic-and-simple-literals/valid/lenient/implicit-null-literal-2.yini
^ ImplicitNullInLenient
val1 = 300
val2 =	// (!) Missing null is OK in lenient mode.
val3 = "My name"
