tests/golden/3-basic-and-simple-literals/invalid/strict/bad-implicit-null-literal-2.yini
^ BadImplicitNullInStrict
val1 = 300
val2 =	// (!) Missing null in strict mode.
val3 = "My name"
/END
